fix(media block): ensure correct overlapping of pseudo-elements and image

--- a/src/scss/blocks/_media_block.scss
+++ b/src/scss/blocks/_media_block.scss
@@ -121,7 +121,6 @@
 
 .media__image {
 	position: relative;
-	z-index: 1;
 	bottom: -10.3rem;
 	width: 100%;
 	height: 66.5rem;
@@ -134,21 +133,6 @@
 
 	&::before {
 		position: absolute;
-		z-index: -1;
-		top: -31rem;
-		left: -10rem;
-		height: 98.5rem;
-		width: 59rem;
-		content: '';
-		background-image: url(../imgs/bg-2.svg);
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-	}
-
-	&::after {
-		position: absolute;
-		z-index: -2;
 		top: -32.5rem;
 		left: -15rem;
 		height: 98.5rem;
@@ -160,7 +144,22 @@
 		background-position: center;
 	}
 
+	&::after {
+		position: absolute;
+		top: -31rem;
+		left: -10rem;
+		height: 98.5rem;
+		width: 59rem;
+		content: '';
+		background-image: url(../imgs/bg-2.svg);
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+
 	.media_pic {
+		position: absolute;
+		z-index: 1;
 		@extend %contain_img;
 	}
 }
